[gd_scene load_steps=6 format=3 uid="uid://bwj3ngn4cvwg1"]

[ext_resource type="Script" path="res://ghost.gd" id="1_4chpb"]
[ext_resource type="Texture2D" uid="uid://vxu2mdoirdy6" path="res://assets/red_ghost.png" id="1_hvft1"]
[ext_resource type="Texture2D" uid="uid://5bs7j6cqwmkv" path="res://assets/scared_ghost.png" id="3_kctcw"]
[ext_resource type="Texture2D" uid="uid://bw32172766p43" path="res://assets/ghost_eyes.png" id="4_mqx2g"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hjvs4"]
radius = 3.9

[node name="Ghost" type="CharacterBody2D"]
collision_layer = 4
motion_mode = 1
wall_min_slide_angle = 0.0174533
script = ExtResource("1_4chpb")
ghost_type = "red"
scatter_nav_array = [Vector2(212, 36), Vector2(212, 68), Vector2(172, 68), Vector2(172, 36)]

[node name="NormalGhost" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_hvft1")

[node name="ScaredGhost" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
texture = ExtResource("3_kctcw")

[node name="GhostEyes" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
texture = ExtResource("4_mqx2g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hjvs4")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
unique_name_in_owner = true
path_desired_distance = 10.0
target_desired_distance = 2.0
avoidance_enabled = true
debug_enabled = true
